# lightloggo

./: .gitignore  LICENSE  Makefile  Readme.md  pyproject.toml
cmd/: main.go
core/: compressor.go  logger.go  record.go  router.go  style.go  write.go  writer.go
core/compressor/: gzip.go
core/formatter/: help.go  json.go
core/writer/: file.go  stdout.go
lightloggo/: __init__.py
lightloggo/_c/: __init__.py
lightloggo/_c/format/: __init__.py  json.py  text.py
lightloggo/_c/logger/: base.py  (+1 more)
lightloggo/_ffi/: _ffi.py
lightloggo/_help/: __init__.py
lightloggo/core/: format.go
lightloggo/enums/: __init__.py  level.py
lightloggo/formatters/: __init__.py  _base.py  json.py  text.py
lightloggo/logger/: _global.py  logger.py
lightloggo/routers/: __init__.py  _base.py
lightloggo/styles/: __init__.py  _base.py
lightloggo/writers/: __init__.py  _base.py  file.py  stdout.py
loggo/: go.mod
loggo/core/: format.go  logger.go  record.go  router.go  style.go  style_test.go
loggo/export/: export.go
loggo/formatter/: help.go  json.go  json_test.go  text.go  text_test.go
loggo/writer/: file.go
pylightloggo/enums/: level.py
pylightloggo/ffi/: ffi.py
pylightloggo/logger/: _global.py
pyloggo/: __init__.py  enums.py  ffi.py  formatter.py  json.py  logger.py  route.py  style.py  writer.py
pyloggo/c/: __init__.py
pyloggo/enums/: colors.py
pyloggo/ffi/: ffi.py
pyloggo/formatters/: __init__.py  json.py  text.py
pyloggo/logger/: _global.py  logger.py
pyloggo/routers/: __init__.py  _base.py
pyloggo/writers/: _base.py  file.py  stdout.py
(+23 files in other folders)
